# Norbs-Nook

./: .gitignore  CMakeLists.txt  README.md  compress  run  业务要求.md
design/: MainDesign.md
design/reqiurement-analysis/: BusinessProcessDiagram.md  FunctionManual.md
manual/: DataDictionary.md  DataFlowDiagram.md  TerminalUserInterfaceDesign.md
requirements/: requirements.md  workflow-requirements.md
src/: TechStack.md
src/api/: public.py  runtime.py  server.py
src/backend/: account.cpp  account.hpp  action.cpp  action.hpp  bookkeeper.cpp  bookkeeper.hpp  business_logic.cpp  business_logic.hpp  global.cpp  global.hpp  logging.cpp  logging.hpp  main.cpp  main_cui.cpp  main_gui.cpp  user_interface.cpp  user_interface.hpp
src/backend/lib/: norb_alias.hpp  norb_blocklist.hpp  norb_blocklist.tpp  norb_blocklist_init.cpp  norb_bounds.hpp  norb_bounds.tpp  norb_con.hpp  norb_naivelist.hpp  norb_string.hpp  norb_string.tpp  norb_strlib.cpp  norb_strlib.hpp  norb_utils.hpp  norb_utils.tpp  strlib.cpp  strlib.hpp
src/backend/static/: constants.hpp  constants_debug_mode.hpp  constants_oj_mode.hpp
src/frontend/norbs-nook-frontend/: auto-imports.d.ts  components.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/frontend/norbs-nook-frontend/src/: App.vue  main.ts  router.ts  style.css
src/frontend/norbs-nook-frontend/src/components/: AddAccountCard.vue  BookEditCard.vue  PasswordEditCard.vue  SearchBar.vue
src/frontend/norbs-nook-frontend/src/views/: AccountManagement.vue  Books.vue  Dashboard.vue  History.vue  Logs.vue  ServerDown.vue  SigninRegister.vue  Welcome.vue
tests/: judge
tests/advanced/testcase1/: 1.in  2.in
tests/custom/: testcase1.in
tests/custom/testcase2/: 1.ans  1.in  2.ans  2.in
tests/unit-test/: unit_test_account.cpp  unit_test_action.cpp  unit_test_blocklist.cpp  unit_test_bookkeeper.cpp  unit_test_lld_blocklist.cpp  unit_test_logging.cpp  unit_test_naivelist.cpp  unit_test_string.cpp
